# ratkit

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.agents/: lazyskills-config.json
docs/content/docs/widgets/: code-widget-plan.mdx  code-widget.mdx
examples/: code_widget_code_widget_demo.rs  markdown_preview_markdown_preview_demo.rs
examples/code_widget_demo/: app.rs  input.rs  sample.rs
examples/markdown_preview_demo/comments/: comment_store_path.rs  from_stored_markdown_line_comment.rs  load_comments.rs  mod.rs  save_comments.rs  stored_markdown_line_comment.rs  to_stored_markdown_line_comment.rs
justfiles/utilities/: demo-code.just
plans/: code_diff.md  code_diff_review_feedback.md  md-comment-popup.md
skills/ratkit/: SKILL.md
skills/ratkit/documentation/: ai_chat_widget.md  button.md  code_diff_widget.md  code_widget_widget.md  dialog.md  document_viewer_widget.md  file_system_tree_widget.md  hotkey_footer_widget.md  markdown_widget.md  menu_bar.md  pane.md  resizable_grid.md  scroll.md  statusline.md  termtui.md  theme_picker_widget.md  toast.md  tree_view.md
src/: layout.rs  lib.rs  runner_helper.rs  types.rs
src/core/: mod.rs
src/primitives/scroll/: mod.rs
src/primitives/termtui/vt100/: screen_differ.rs
src/widgets/: mod.rs
src/widgets/code_diff/: mod.rs
src/widgets/code_diff/code_diff/: foundation.rs  mod.rs
src/widgets/code_diff/code_diff/layout/: build_side_by_side_rows.rs  compute_inline_segments.rs  expand_tabs.rs  mod.rs  pair_modified_lines.rs
src/widgets/code_diff/code_diff/parse/: mod.rs  parse_file_header.rs  parse_hunk_header.rs  parse_unified_diff.rs
src/widgets/code_diff/code_diff/types/: change_type.rs  diff_file.rs  diff_file_status.rs  diff_hunk.rs  diff_line.rs  diff_line_cell.rs  diff_line_kind.rs  diff_style.rs  inline_segment.rs  mod.rs  side_by_side_row.rs
src/widgets/code_diff/code_diff/widget/: mod.rs
src/widgets/code_widget/: mod.rs
src/widgets/code_widget/foundation/: code_event.rs  code_language.rs  code_line.rs  code_outline_item.rs  mod.rs
src/widgets/code_widget/parser/: detect_language.rs  extract_symbol_outline.rs  highlight_code_lines.rs  mod.rs
src/widgets/code_widget/state/: code_state.rs  mod.rs
src/widgets/code_widget/widget/: code_widget.rs  handle_outline_click.rs  handle_outline_hover.rs  mod.rs  viewer_content_area.rs
src/widgets/document_viewer/: mod.rs
src/widgets/document_viewer/extensions/: gutter.rs  mod.rs  outline.rs  scrollbar.rs  selection.rs  statusline.rs
src/widgets/document_viewer/foundation/: document_line.rs  document_line_kind.rs  document_outline_item.rs  mod.rs  rendered_document.rs  selection_pos.rs
src/widgets/document_viewer/state/: cache.rs  display_settings.rs  mod.rs  scroll.rs  selection.rs  source.rs  vim.rs
src/widgets/document_viewer/widget/: document_viewer_widget.rs  handle_key.rs  handle_mouse.rs  mod.rs  render_document_lines.rs
src/widgets/markdown_preview/: mod.rs
src/widgets/markdown_preview/widgets/markdown_widget/: markdown_document_adapter.rs  markdown_outline_adapter.rs  markdown_viewer_state_adapter.rs  mod.rs
src/widgets/markdown_preview/widgets/markdown_widget/extensions/: scrollbar.rs  theme.rs
src/widgets/markdown_preview/widgets/markdown_widget/foundation/: events.rs  types.rs
src/widgets/markdown_preview/widgets/markdown_widget/state/: cache.rs  comment_popup.rs  display_settings.rs  mod.rs  scroll.rs  selection.rs
src/widgets/markdown_preview/widgets/markdown_widget/widget/: builder.rs  mod.rs
src/widgets/markdown_preview/widgets/markdown_widget/widget/features/: comments.rs  mod.rs  toc.rs
src/widgets/markdown_preview/widgets/markdown_widget/widget/input/: comment_popup.rs  keyboard.rs  mod.rs
src/widgets/markdown_preview/widgets/markdown_widget/widget/render/: comments.rs  mod.rs  pipeline.rs  statusline.rs
tests/: code_diff_layout_tests.rs  code_diff_parser_layout_tests.rs  code_widget_snapshots.rs  code_widget_toc_interaction_tests.rs  demo_visual_comparison_snapshot.rs  demo_visual_style_parity_tests.rs  markdown_comment_popup_snapshot.rs  markdown_document_viewer_adapter_tests.rs  markdown_inline_code_snapshot.rs  scroll_state_tests.rs
tests/snapshots/: code_widget_snapshots__code_widget_python.snap  code_widget_snapshots__code_widget_rust.snap  code_widget_snapshots__code_widget_typescript.snap  demo_visual_comparison_snapshot__demo_visual_comparison_code.snap  demo_visual_comparison_snapshot__demo_visual_comparison_feature_report.snap  demo_visual_comparison_snapshot__demo_visual_comparison_markdown.snap  markdown_comment_popup_snapshot__comment_marker_renders.snap  markdown_comment_popup_snapshot__comment_marker_with_scrollbar.snap  markdown_comment_popup_snapshot__comment_popup_draft_cursor.snap  markdown_comment_popup_snapshot__comment_popup_matches_source_gutter.snap  markdown_comment_popup_snapshot__comment_popup_multiline_draft.snap  markdown_comment_popup_snapshot__comment_popup_opens_after_hotkey.snap  markdown_comment_popup_snapshot__comment_popup_reopens_saved_comment.snap
